tests/snapshots/cli_snapshots__minimal_valid_full_workflow.snap
---
source: tests/cli_snapshots.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl check
Checked:
  1 RFCs
  1 clauses
  0 ADRs
  1 work items

warning[W0104]: Skipped ADR (parse error): Invalid TOML: TOML parse error at line 2, column 10
  |
2 | schema = "adr"
  |          ^^^^^
invalid type: string "adr", expected u32
 (gov/adr/ADR-XXXX-test-decision.toml)
warning[W0108]: Work item 'WI-<DATE>-001' has placeholder or empty description (gov/work/<DATE>-test-work-item.toml)
exit: 0

$ govctl list rfc
┌──────────┬─────────┬───────────┬────────┬──────────┐
│ RFC      ┆ Version ┆ Status    ┆ Phase  ┆ Title    │
╞══════════╪═════════╪═══════════╪════════╪══════════╡
│ RFC-0001 ┆ 1.0.0   ┆ normative ┆ stable ┆ Test RFC │
└──────────┴─────────┴───────────┴────────┴──────────┘
exit: 0

$ govctl list clause
┌───────────┬──────────┬───────────┬────────┬────────────────┐
│ Clause    ┆ RFC      ┆ Kind      ┆ Status ┆ Title          │
╞═══════════╪══════════╪═══════════╪════════╪════════════════╡
│ C-EXAMPLE ┆ RFC-0001 ┆ normative ┆ active ┆ Example Clause │
└───────────┴──────────┴───────────┴────────┴────────────────┘
exit: 0

$ govctl list adr
┌─────┬────────┬──────┬───────┐
│ ADR ┆ Status ┆ Date ┆ Title │
╞═════╪════════╪══════╪═══════╡
└─────┴────────┴──────┴───────┘
exit: 0

$ govctl list work
┌───────────────────┬────────┬────────────────┐
│ ID                ┆ Status ┆ Title          │
╞═══════════════════╪════════╪════════════════╡
│ WI-<DATE>-001 ┆ active ┆ Test work item │
└───────────────────┴────────┴────────────────┘
exit: 0

$ govctl status
govctl status

RFCs
  normative    1
  Total        1

Clauses
  active       1
  Total        1

ADRs
  Total        0

Work Items
  active       1
  Total        1

Active Work
  WI-<DATE>-001 Test work item

exit: 0
